BTWCT-14691 | SVG icon alignment issue fix

--- a/waters-aem-frontend/src/styles/accordion.scss
+++ b/waters-aem-frontend/src/styles/accordion.scss
@@ -45,6 +45,8 @@
             margin-right: $space-xs;
 
             svg {
+                height: $icon-m;
+                width: $icon-m;
                 .st0,
                 .st1 {
                     stroke: $color-icon;
